--- a/Caomei.Shared/Shared/PublicLayout.razor
+++ b/Caomei.Shared/Shared/PublicLayout.razor
@@ -70,7 +70,7 @@
             <li class="nav-item"><a href="/" class="nav-link px-2 text-muted">@wtmblazor.Localizer["Sys.Index"]</a></li>
             <li class="nav-item"><a href="About" class="nav-link px-2 text-muted">@wtmblazor.Localizer["Public.About"]</a></li>
         </ul>
-        <p class="text-center text-muted">&copy; @(DateTime.Now.Year) Caomei Inc   <a href="https://beian.miit.gov.cn/">冀ICP备18001095号-4</a></p>
+        <p class="text-center text-muted">&copy; @(DateTime.Now.Year) Caomei Inc  </p>
 
 
     </footer>
