--- a/Caomei.Shared/Shared/Reg.razor
+++ b/Caomei.Shared/Shared/Reg.razor
@@ -125,7 +125,7 @@
 
     private void Login()
     {
-        NavigationManager.NavigateTo("/Login");
+        NavigationManager.NavigateTo("/Login",true);
 
     }
 }
